--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Entities/GenerateEntities.tt
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Entities/GenerateEntities.tt
@@ -188,7 +188,7 @@ void GenerateEntitiesFromEDMXFile(FileInfo edmxFile, EntityGenerationContext ctx
             /// <summary>
             /// 
             /// </summary>
-            /// <see cref="<#= entityInterfaceName #>.<#= fieldName #>" />
+            /// <see cref="global::<#= schemaNamespace #>.<#= entityInterfaceName #>.<#= fieldName #>" />
             [global::MarcelJoachimKloubert.CLRToolbox.Data.TMColumn(ClrType = typeof(global::<#= fieldType #>), IsKey = <#= ctx.CODE.CreateLiteral(ctx.TOOLS.IsKey(sf)) #>, IsNullable = <#= ctx.CODE.CreateLiteral(ctx.TOOLS.IsNullable(sf)) #>, Name = <#= ctx.CODE.CreateLiteral(fieldName) #>)]
             [global::System.Runtime.Serialization.DataMember(EmitDefaultValue = true, Name = <#= ctx.CODE.CreateLiteral(fieldName) #>)]
             public global::<#= fieldType #> <#= fieldName #>
