--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Enums/GenerateEnums.tt
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Enums/GenerateEnums.tt
@@ -12,7 +12,7 @@
 <#@ Import Namespace="System.Xml.XPath" #>
 <#@ output extension=".cs"#><#
 
-var ctx = new EntityGenerationContext(this);
+var ctx = new EnumGenerationContext(this);
 
 foreach (var configFile in ctx.WORKING_DIRECTORY.GetFiles("*.xml")
                                                 .Where(f => !f.Name.ToLower().Trim().EndsWith(".sample.xml")))
@@ -26,7 +26,7 @@ ctx.FILE_MANAGER.Process();
 #>
 <#+
 
-void GenerateEnumsFromConfigFile(FileInfo configFile, EntityGenerationContext ctx)
+void GenerateEnumsFromConfigFile(FileInfo configFile, EnumGenerationContext ctx)
 {
     XDocument xmlDoc;
     using (var stream = configFile.OpenRead())
@@ -121,7 +121,7 @@ enum DatabaseProvider
     ADO_MSSQL,
 }
 
-class EntityGenerationContext
+class EnumGenerationContext
 {
     public readonly CodeGenerationTools CODE;
     public readonly EntityFrameworkTemplateFileManager FILE_MANAGER;
@@ -132,7 +132,7 @@ class EntityGenerationContext
     public readonly MetadataTools TOOLS;
     public readonly DirectoryInfo WORKING_DIRECTORY;
 
-    public EntityGenerationContext(GeneratedTextTransformation parent)
+    public EnumGenerationContext(GeneratedTextTransformation parent)
     {
         this.PARENT = parent;
         this.WORKING_DIRECTORY = new DirectoryInfo(this.PARENT.Host.ResolvePath("./"));
