objects, extension/helper methods, tools and app server functions
- ADD: Error event to ITMObject interface
- ADD: RaiseEventHandler() methods to TMObject class
- ADD: ListProcesses app server function can use a filter of IDs now
- ADD: can exit ApServerProcessManager now
- ADD: Count() helper method
- ADD: Is(Not)Null() helper/extension methods
- ADD: Is(Not)Empty helper/extension methods

--- a/Projects/MarcelJoachimKloubert.ApplicationServer/Tools/AppServerProcessManager/AppServerProcessManager/Windows/MainWindow.xaml
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/Tools/AppServerProcessManager/AppServerProcessManager/Windows/MainWindow.xaml
@@ -27,7 +27,10 @@
               Height="24px"
               IsMainMenu="True">
 
-            <MenuItem Header="_File" />
+            <MenuItem Header="_File">
+                <MenuItem Command="{Binding Path=ExitCommand, Mode=OneWay}" Header="_Exit" />
+            </MenuItem>
+            
             <MenuItem Header="_DEBUG">
                 <MenuItem Command="{Binding Path=TestCommand, Mode=OneWay}" Header="_Test" />
             </MenuItem>
