--- a/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/Controls/Windows/MainWindow.xaml
+++ b/Projects/MarcelJoachimKloubert.FileCompare/MarcelJoachimKloubert.FileCompare.WPF/Controls/Windows/MainWindow.xaml
@@ -2,6 +2,7 @@
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:conv="clr-namespace:MarcelJoachimKloubert.FileCompare.WPF.Converters"
+                     xmlns:local="clr-namespace:MarcelJoachimKloubert.FileCompare.WPF.Classes"
                      xmlns:MahApps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                      Title="FileCompare GUI"
                      Width="800" Height="600"
@@ -9,7 +10,6 @@
                      Icon="/Resources/Live Sync.png"
                      Loaded="MetroWindow_Loaded">
 
-    
     <MahApps:MetroWindow.Resources>
         <conv:BooleanToEnabledConverter x:Key="tmBooleanToEnabledConverter" />
         <conv:BooleanToVisibilityConverter x:Key="tmBooleanToVisibilityConverter" />
@@ -287,33 +287,37 @@
                         <Grid.Resources>
                             <Style TargetType="{x:Type ListBoxItem}">
                                 <Setter Property="Margin" Value="8" />
+                                <Setter Property="Background" Value="#333333" />
                                 
-                                <Style.Triggers>
+                                <!--<Style.Triggers>
                                     <Trigger Property="ItemsControl.AlternationIndex" Value="0">
-                                        <Setter Property="Background" Value="#000"></Setter>
+                                        <Setter Property="Background" Value="#333333"></Setter>
                                     </Trigger>
                                     
                                     <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                                        <Setter Property="Background" Value="#111"></Setter>
+                                        <Setter Property="Background" Value="#444444"></Setter>
                                     </Trigger>
-                                </Style.Triggers>
+                                </Style.Triggers>-->
                             </Style>
                         </Grid.Resources>
                         
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         
-                        <ListBox ItemsSource="{Binding Path=Differences, Mode=OneWay}"
+                        <ListBox Grid.Row="0"
+                                 ItemsSource="{Binding Path=Results, Mode=OneWay}"
                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                  ScrollViewer.VerticalScrollBarVisibility="Auto"
-                                 AlternationCount="2">
-
-                            <ListBox.ItemTemplate>
-                                <DataTemplate>
+                                 AlternationCount="2"
+                                 BorderBrush="DarkGray" BorderThickness="1">
+                            
+                            <ListBox.Resources>
+                                <!-- CompareDifference -->
+                                <DataTemplate DataType="{x:Type local:CompareDifference}">
                                     <Border Margin="0,4,8,4"
-                                            Padding="0,4,4,4"
-                                            BorderBrush="#333">
+                                            Padding="0,4,4,4">
 
                                         <Border.Resources>
                                             <Style TargetType="{x:Type TextBlock}">
@@ -327,7 +331,7 @@
                                                 <ColumnDefinition Width="Auto" />
                                                 <ColumnDefinition Width="*" />
                                             </Grid.ColumnDefinitions>
-                                            
+
                                             <Image Grid.Column="0"
                                                    Margin="8,8,16,0"
                                                    Source="{Binding Path=Icon, Mode=OneWay}"
@@ -382,12 +386,12 @@
                                                             <Setter Property="Width" Value="32px" />
                                                         </Style>
                                                     </WrapPanel.Resources>
-                                                    
+
                                                     <Image Source="../../Resources/Icons/missing.png"
                                                            Visibility="{Binding Path=IsMissing, Mode=OneWay,
                                                                                 Converter={StaticResource BooleanToVisibilityConverter}}"
                                                            ToolTip="Missing" />
-                                                    
+
                                                     <Image Source="../../Resources/Icons/size.png"
                                                            Visibility="{Binding Path=HasDifferentSizes, Mode=OneWay,
                                                                                 Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -407,8 +411,14 @@
                                         </Grid>
                                     </Border>
                                 </DataTemplate>
-                            </ListBox.ItemTemplate>
+                            </ListBox.Resources>
                         </ListBox>
+                        
+                        <StackPanel Grid.Row="1"
+                                    Margin="0,4,0,0">
+
+                            <Button Command="{Binding Path=SaveResultCommand, Mode=OneWay}">Save</Button>
+                        </StackPanel>
                     </Grid>
                 </GroupBox>
             </Grid>
