DragNBatch, application, debugging, ForEach, collections, fixes, cleanups and improvements
- ADD: synchronized lists and dictionaries are serializable now
- ADD: started to make use of DebuggerDisplayAttribute
- ADD: ForEach() helper and extension methods
- CHG: action parameter of IGeneralList.ForEach()
- CHG: actionStateFactories structure for ForAll()/ForAllAsync() methods
- CHG: code cleanups and improvements
- ADD: Index property for IForAllItemExecutionContext<T> interface
- FIX: minor fixes
- ADD: SynchronizedDictionary can handle custom key comparer now
- ADD: Vars property to TMApplication class
- ADD: can select DragNBatch plugin now

--- a/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch/Windows/MainWindow.xaml
+++ b/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch/Windows/MainWindow.xaml
@@ -3,24 +3,19 @@
                                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                      xmlns:mjkTBConv="clr-namespace:MarcelJoachimKloubert.CLRToolbox.Windows.Data.Impl;assembly=MarcelJoachimKloubert.CLRToolbox.WPF"
                                      xmlns:mjkTBCtrls="clr-namespace:MarcelJoachimKloubert.CLRToolbox.Windows.Controls;assembly=MarcelJoachimKloubert.CLRToolbox.WPF"
-                                     Loaded="Window_Loaded"
+                                     xmlns:locData="clr-namespace:MarcelJoachimKloubert.DragNBatch.Data"
                                      Width="128" Height="128">
 
     <Window.Resources>
         <mjkTBConv:BooleanToVisibilityConverter x:Key="tmBooleanToVisibilityConverter" />
+        <locData:PlugInsToMenuItemsValueConverter x:Key="tmPlugInsToMenuItemsValueConverter" />
     </Window.Resources>
     
     <Window.ContextMenu>
         <ContextMenu>
             <MenuItem Header="Select plugin..."
-                      ItemsSource="{Binding Path=PlugIns, Mode=OneWay}">
-                
-                <MenuItem.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Path=DisplayName, Mode=OneWay}" />
-                    </DataTemplate>
-                </MenuItem.ItemTemplate>
-            </MenuItem>
+                      ItemsSource="{Binding Path=PlugIns, Mode=OneWay,
+                                            Converter={StaticResource tmPlugInsToMenuItemsValueConverter}}" />
         </ContextMenu>
     </Window.ContextMenu>
     
